--- a/visualisation/CMakeLists.txt
+++ b/visualisation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(mapping)
+project(visualisation)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -7,21 +7,16 @@ project(mapping)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED#COMPONENTS
-	roscpp
-	rospy
-	geometry_msgs
-  nav_msgs
-	std_msgs
-	message_generation
-	genmsg
+find_package(catkin REQUIRED
+    roscpp
+    nav_msgs
 	rosconsole
 )
 
 ## System dependencies are found with CMake's conventions
-#find_package(Boost REQUIRED COMPONENTS system)
-
+# find_package(Boost REQUIRED COMPONENTS system)
 find_package(OpenCV REQUIRED)
+
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
@@ -110,10 +105,10 @@ find_package(OpenCV REQUIRED)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES mapping
+  LIBRARIES visualisation
   CATKIN_DEPENDS roscpp rosconsole nav_msgs
-  #DEPENDS system_lib OpenCV
-  DEPENDS OpenCV
+#  DEPENDS system_lib
+    DEPENDS OpenCV
 )
 
 ###########
@@ -128,7 +123,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/mapping.cpp
+#   src/${PROJECT_NAME}/visualisation.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -139,7 +134,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/mapper_client.cpp src/gridmap2d.cpp)
+add_executable(${PROJECT_NAME}_node src/visualisator.cpp src/gridmap2d.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -153,8 +148,8 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
+   ${catkin_LIBRARIES}
+   ${OpenCV_LIBRARIES}
 )
 
 #############
@@ -204,7 +199,7 @@ target_link_libraries(${PROJECT_NAME}_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_mapping.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_visualisation.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
