--- a/mapping/package.xml
+++ b/mapping/package.xml
@@ -49,10 +49,12 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
   <depend>roscpp</depend>
   <depend>rosconsole</depend>
   <depend>nav_msgs</depend>
   <depend>libopencv-dev</depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
