--- a/planification/CMakeLists.txt
+++ b/planification/CMakeLists.txt
@@ -50,8 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
-   listePoints.msg
-#   Message2.msg
+   ListePoints.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -69,10 +68,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   geometry_msgs  # Or other packages containing msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -122,8 +121,8 @@ include_directories(
 )
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/planification.cpp
+# add_library(${planification}
+#   src/planification/planification.cpp
 # )
 
 ## Add cmake target dependencies of the library
