--- a/commande/package.xml
+++ b/commande/package.xml
@@ -34,6 +34,7 @@
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
   <depend>rospy</depend>
   <depend>geometry_msgs</depend>
+  <depend>planification</depend>
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
