visu of the checkpoint trajectory

--- a/mapping/CMakeLists.txt
+++ b/mapping/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(mapping)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -51,16 +51,16 @@ find_package(OpenCV REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ #add_message_files(
+ #  FILES
+ #  ListePoints.msg
+ #)
 
 ## Generate services in the 'srv' folder
  add_service_files(
    FILES
    BinaryMap.srv
+ #  Checkpoints.srv
  )
 
 ## Generate actions in the 'action' folder
@@ -75,6 +75,7 @@ find_package(OpenCV REQUIRED)
    DEPENDENCIES
    nav_msgs
    std_msgs  # Or other packages containing msgs
+   geometry_msgs
  )
 
 ################################################
