--- a/control/package.xml
+++ b/control/package.xml
@@ -56,6 +56,11 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
+
+  <depend>geometry_msgs</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
