--- a/mapping/CMakeLists.txt
+++ b/mapping/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   std_msgs
   message_generation
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
