--- a/mapping/package.xml
+++ b/mapping/package.xml
@@ -52,6 +52,7 @@
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
+  <depend>tf2_ros</depend>
 
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
